# test_repo

./: .gitlab-ci.yml  CHANGELOG.md  bugfix.py  new_api.py  pyproject.toml
.github/workflows/: release.yml
