[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-new-project"
version = "0.0.0"  # Initial version must be a valid SemVer
description = "A sample Python project with automated releases"

[tool.semantic_release]
# Configure version stamping
version_toml = ["pyproject.toml:project.version"]

# Configure the build command
build_command = "python3 -m build --sdist --wheel ."

# Choose the commit parser (default is "conventional")
commit_parser = "conventional"
# Optional: customize conventional commit tags if needed
[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
parse_squash_commits = true
ignore_merge_commits = true

# Configure the changelog
[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"

# Recommended exclusion patterns for the changelog
[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Initial [Cc]ommit.*''',
]